--- a/notebooks/kaggle_acquire_valued_shoppers_challenge/classification.ipynb
+++ b/notebooks/kaggle_acquire_valued_shoppers_challenge/classification.ipynb
@@ -38,14 +38,14 @@
         "id": "XKydJ9qF4KVm"
       },
       "source": [
-        "\u003ctable align=\"left\"\u003e\n",
-        "  \u003ctd\u003e\n",
-        "    \u003ca target=\"_blank\" href=\"https://colab.research.google.com/github/google/lifetime_value/blob/master/notebooks/kaggle_acquire_valued_shoppers_challenge/classification.ipynb\"\u003e\u003cimg src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /\u003eRun in Google Colab\u003c/a\u003e\n",
-        "  \u003c/td\u003e\n",
-        "  \u003ctd\u003e\n",
-        "    \u003ca target=\"_blank\" href=\"https://github.com/google/lifetime_value/blob/master/notebooks/kaggle_acquire_valued_shoppers_challenge/classification.ipynb\"\u003e\u003cimg src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" /\u003eView source on GitHub\u003c/a\u003e\n",
-        "  \u003c/td\u003e\n",
-        "\u003c/table\u003e"
+        "<table align=\"left\">\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/google/lifetime_value/blob/master/notebooks/kaggle_acquire_valued_shoppers_challenge/classification.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/google/lifetime_value/blob/master/notebooks/kaggle_acquire_valued_shoppers_challenge/classification.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+        "  </td>\n",
+        "</table>"
       ]
     },
     {
@@ -154,7 +154,7 @@
         "```\n",
         "%%shell\n",
         "mkdir ~/.kaggle\n",
-        "echo \\{\\\"username\\\":\\\"{your kaggle username}\\\",\\\"key\\\":\\\"{your kaggle api key}\\\"\\} \u003e ~/.kaggle/kaggle.json\n",
+        "echo \\{\\\"username\\\":\\\"{your kaggle username}\\\",\\\"key\\\":\\\"{your kaggle api key}\\\"\\} > ~/.kaggle/kaggle.json\n",
         "pip install kaggle\n",
         "```"
       ]
@@ -234,7 +234,7 @@
       "outputs": [],
       "source": [
         "def preprocess(df):\n",
-        "  df = df.query('purchaseamount\u003e0')\n",
+        "  df = df.query('purchaseamount>0')\n",
         "  df['date'] = pd.to_datetime(df['date'], format='%Y-%m-%d')\n",
         "  df['start_date'] = df.groupby('id')['date'].transform('min')\n",
         "\n",
@@ -246,8 +246,8 @@
         "\n",
         "  # Compute holdout values\n",
         "  one_year_holdout_window_mask = (\n",
-        "      (df['date'] \u003e df['start_date']) \u0026\n",
-        "      (df['date'] \u003c= df['start_date'] + np.timedelta64(365, 'D')))\n",
+        "      (df['date'] > df['start_date']) &\n",
+        "      (df['date'] <= df['start_date'] + np.timedelta64(365, 'D')))\n",
         "  holdout_value = (\n",
         "      df[one_year_holdout_window_mask].groupby('id')\n",
         "      ['purchaseamount'].sum().reset_index())\n",
@@ -548,8 +548,8 @@
       "outputs": [],
       "source": [
         "if LOSS == 'bce':\n",
-        "  y_train = (y_train \u003e 0).astype('float32')\n",
-        "  y_eval = (y_eval \u003e 0).astype('float32')"
+        "  y_train = (y_train > 0).astype('float32')\n",
+        "  y_eval = (y_eval > 0).astype('float32')"
       ]
     },
     {
@@ -635,7 +635,7 @@
       },
       "outputs": [],
       "source": [
-        "y_true = (y_eval \u003e 0).astype('float32')"
+        "y_true = (y_eval > 0).astype('float32')"
       ]
     },
     {
@@ -647,7 +647,7 @@
       "outputs": [],
       "source": [
         "def classification_report(y_true: Sequence[int],\n",
-        "                          y_pred: Sequence[float]) -\u003e pd.DataFrame:\n",
+        "                          y_pred: Sequence[float]) -> pd.DataFrame:\n",
         "  \"\"\"Report individual level classification metrics.\n",
         "\n",
         "  Arguments:\n",
@@ -661,9 +661,9 @@
         "\n",
         "  out['AUC'] = metrics.roc_auc_score(y_true, y_pred)\n",
         "  out['PR_AUC'] = metrics.average_precision_score(y_true, y_pred)\n",
-        "  out['precision'] = metrics.precision_score(y_true, 1 * (y_pred \u003e .5))\n",
-        "  out['recall'] = metrics.recall_score(y_true, 1 * (y_pred \u003e .5))\n",
-        "  out['f1'] = metrics.f1_score(y_true, 1 * (y_pred \u003e .5))\n",
+        "  out['precision'] = metrics.precision_score(y_true, 1 * (y_pred > .5))\n",
+        "  out['recall'] = metrics.recall_score(y_true, 1 * (y_pred > .5))\n",
+        "  out['f1'] = metrics.f1_score(y_true, 1 * (y_pred > .5))\n",
         "  return out"
       ]
     },
@@ -802,8 +802,13 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "ziln",
+      "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.16"
     }
   },
   "nbformat": 4,
